--- a/workshop/content/nationalparks-javascript-databases.adoc
+++ b/workshop/content/nationalparks-javascript-databases.adoc
@@ -89,11 +89,11 @@ image::images/nationalparks-databases-binding-add-binding-to-nationalparks.png[A
 
 This change in configuration will trigger a new deployment of the `nationalparks` application with the environment variables properly injected.
 
-Back in the *Topology* view, click and drag the `mongodb` component into the light gray area that denotes the `workshop` application, so that all three components are contained in it.
+Back in the *Topology* view, click and drag the `mongodb-nationalparks` component into the light gray area that denotes the `workshop` application, so that all three components are contained in it.
 
 image::images/nationalparks-databases-add-mongodb-to-workshop-app.png[Add mongodb to the workshop app]
 
-Next, let's fix the labels assigned to the `mongodb` deployment. Currently, we cannot set labels when using the database template from the catalog, so we will fix these labels manually. 
+Next, let's fix the labels assigned to the `mongodb-nationalparks` deployment. Currently, we cannot set labels when using the database template from the catalog, so we will fix these labels manually. 
 
 Like before, we'll add 3 labels:
 
@@ -104,7 +104,7 @@ Like before, we'll add 3 labels:
 Execute the following command:
 [source,bash,role=execute-1]
 ----
-oc label dc/mongodb-nationalparks svc/mongodb app=workshop component=nationalparks role=database --overwrite
+oc label dc/mongodb-nationalparks svc/mongodb-nationalparks app=workshop component=nationalparks role=database --overwrite
 ----
 
 
