--- a/workshop/content/nationalparks-php-codechanges-gogs.adoc
+++ b/workshop/content/nationalparks-php-codechanges-gogs.adoc
@@ -17,14 +17,11 @@ image::images/nationalparks-codechanges-webhook-config.png[Webhook]
 Click *Copy URL with Secret*. Once you have the URL copied to your clipboard, navigate to the code repository
 that you have on Gogs:
 
-[source,bash,role=copypaste]
-----
-http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks
-----
+link:http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks[Gogs Repository]
 
 Your Gogs credentials are:
 
-[source,bash,role=copypaste]
+[source,bash]
 ----
 username: {{username}}
 password: {{GOGS_PASSWORD}}
@@ -109,10 +106,7 @@ nationalparks-2   Source    Git@3b26e1a   Running    43 seconds ago
 Once the build and deploy has finished, verify your new image was
 automatically deployed by viewing the application in your browser:
 
-[source,bash,role=copypaste]
-----
-http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
-----
+link:http://nationalparks-{{project_namespace}}.{{cluster_subdomain}}/ws/info/[National Parks Info Page]
 
 You should now see the new name you have set in the JSON string returned.
 
@@ -163,10 +157,7 @@ Warning: the following images triggers were disabled: nationalparks:live
 Once the deploy is complete, verify that the page header is reverted to the
 original header by viewing the application in your browser.
 
-[source,bash,role=copypaste]
-----
-http://nationalparks-{{ project_namespace  }}.{{cluster_subdomain}}/ws/info/
-----
+link:http://nationalparks-{{project_namespace}}.{{cluster_subdomain}}/ws/info/[National Parks Info Page]
 
 [NOTE]
 ====
