--- a/workshop/content/common-explore.adoc
+++ b/workshop/content/common-explore.adoc
@@ -45,9 +45,15 @@ oc project {{ project_namespace  }}
 == The Web Console
 
 OpenShift ships with a web-based console that will allow users to
-perform various tasks via a browser. In the Homeroom environment, the web console is embedded within the dashboard you are using to access the workshop.
+perform various tasks via a browser. 
 
-To get a feel for how the web console works, switch to the web console by clicking on the **Console** tab or click here on this link:{{console_url}}/k8s/cluster/projects[Web Console] +++<span class="fas fa-window-restore"></span>+++ link.
+To get a feel for how the web console works, click on this http://console-openshift-console.{{cluster_subdomain}}/k8s/cluster/projects[Web Console] link.
+
+On the login screen, enter the following credentials:
+
+Username: `{{username}}`
+
+Password: `openshift`
 
 The first time you access the web console, you will most likely be in the Administrator perspective. You will be presented with the list of Projects that you can access, and you will see something that looks like the following image:
 
