fix repository names per framework

--- a/workshop/content/nationalparks-php.adoc
+++ b/workshop/content/nationalparks-php.adoc
@@ -64,7 +64,7 @@ application code!
 The repository that we are going to use is already cloned in the internal Gogs repository
 and located at the following URL:
 
-link:http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks.git[Gogs Repository]
+link:http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks-php.git[Gogs Repository]
 
 Your Gogs credentials are:
 
@@ -103,7 +103,7 @@ and for the Git repository URL, enter:
 
 [source,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks.git
+http://gogs-{{INFRA_PROJECT}}.{{cluster_subdomain}}/{{username}}/nationalparks-php.git
 ----
 
 NOTE: All of these runtimes shown are made available via *Templates* and
